# repackage-ocp

./: .gitignore  Build.sh  CMakeLists-novtk-2.txt  CMakeLists-novtk.txt  Makefile  README.md  build123d.patch  create_lib.sh  environment-3.10.yml  environment-3.11.yml  environment-3.12.yml  environment-3.13.yml  get-config.py  no-vtk.patch  ocp-novtk.toml  ocp-vtk.toml  pandas.patch
.github/workflows/: build-ocp-v2.yml  build-ocp.yml  build-split-ocp.yml  build-vtk-ocp.yml  build-vtk.yml  build.vtk.yml  common-setup.yml  compiler.yml  create-ocp-sources.yml  create-vtk-occt-sdks.yml  matrix.yml  test-nlopt-casadi.yml
OCP/: Makefile  setup.py
VTK/: Makefile  pyproject.toml  setup.py
cmake/: clang-config.cmake  llvm-config.cmake  vtk-config-macos-13.cmake  vtk-config-macos-14.cmake  vtk-config-ubuntu-20.04.cmake  vtk-config-ubuntu-22.04.cmake  vtk-config-windows-2019.cmake  vtk-config.cmake
patches/: build123d-novtk.patch  build123d-vtk.patch  build123d.patch  cadquery.patch  no-vtk-2.patch  vtk.patch
pypi/: Makefile  __init__.py  __init__win.py  ocp-tree.py  pyproject.toml
